-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 RC1
-
Windows, CI
-
e1b51ed1dbe88a21dadc1680e75e3a4fe229277d (qtdeclarative/release, 18.11.2013, 5.2..0 RC)
http://testresults.qt-project.org/qtmetrics/autoteststatus/index.html of 12.11.2013 and previous shows that the test frequently crashes on Windows (various builds, MSVC2010/32 as well as MSVC2012/64). The last successful example is apparently qml-i18n.qml
So far, this neither locally reproduceable nor by logging into the CI machines, so the assumption is that something fails under load.
I am wondering about the below code:
QScopedPointer<QObject> object(component.beginCreate(engine.rootContext()));
QQuickItem *root = qobject_cast<QQuickItem *>(object.data());
if (!root)
component.completeCreate();
QVERIFY(root);
If root is 0, is there any point in still calling component.completeCreate() ? - Why is it not simply calling create()?
- relates to
-
QTBUG-42772 qtdeclarative\tests\auto\particles\qquickcustomparticle\tst_qquickcustomparticle crashes on exit
-
- Closed
-
For Gerrit Dashboard: QTBUG-34806 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
71572,2 | Make sure we clean up GL resources before we delete the GL context. | release | qt/qtdeclarative | Status: MERGED | +2 | 0 |